--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="project-content">
             <h3>We Run</h3>
             <div class="project-more-info">
-              <p>We run is an app for nomad runners who move from city to city and are looking to meet new running buddies to exercise with and discover the city.</p>
+              <p>We run is an app for nomad runners who move from city to city and are looking to meet new running buddies and discover the city.</p>
               <div class="skills info-element">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
@@ -36,28 +36,28 @@
             </div>
           </div>
           <div class="project-image">
-            <div id="werunControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="werunControls" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/werun-home.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-home.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-map.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-map.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-request.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-request.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-tracks.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-tracks.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-track.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-track.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-chatting.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-chatting.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/werun-dashboard.png" class="d-block w-100" alt="...">
+                  <img src="images/werun-dashboard.png" class="d-block" alt="...">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#werunControls" role="button" data-bs-slide="prev">
@@ -73,19 +73,19 @@
         </div>
         <div class="project-left">
           <div class="project-image">
-            <div id="purshareControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="purshareControls" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/purshare-home.png" class="w-100" alt="...">
+                  <img src="images/purshare-home.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/purshare-bag.png" class="w-100" alt="...">
+                  <img src="images/purshare-bag.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/purshare-request.png" class="w-100" alt="...">
+                  <img src="images/purshare-request.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/purshare-dashboard.png" class="w-100" alt="...">
+                  <img src="images/purshare-dashboard.png" class="d-block" alt="...">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#purshareControls" role="button" data-bs-slide="prev">
@@ -121,7 +121,7 @@
             <div class="project-more-info">
               <p>This is a clonepage of newstapa.
                 <br>
-                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.newstapa.org/n1905</a>"</p>
+                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
               <div class="skills">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
@@ -133,13 +133,13 @@
             </div>
           </div>
           <div class="project-image">
-            <div id="clonepageControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="clonepageControls" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/newstapa-home.png" class="d-block w-100" alt="...">
+                  <img src="images/newstapa-home.png" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/newstapa-info.png" class="d-block w-100" alt="...">
+                  <img src="images/newstapa-info.png" class="d-block" alt="...">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#clonepageControls" role="button" data-bs-slide="prev">
