add one project

--- a/index.html
+++ b/index.html
@@ -117,21 +117,24 @@
 
         <div class="project-right">
           <div class="project-content">
-            <h3>Clonepage</h3>
+            <h3>Sound of alphabet</h3>
             <div class="project-more-info">
-              <p>This is a clonepage of newstapa.
-                <br>
-                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
-              <div class="skills">
+              <p>This project is developed from one of challenges on 'JavaScript30' of Wes Bos. You can hear the pronunciation by pressing the keyboard.</p>
+              <div class="skills info-element">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
                 <span class="skill">JavaScript</span>
-                <span class="skill">Ruby on Rails</span>
-                <span class="skill">Heroku</span>
+                <span class="skill">Github Pages</span>
               </div>
-              <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
+              <a href="https://jay-jykim91.github.io/alphabetjs/" class="project-url">Visit this website</a>
             </div>
           </div>
+          <div class="project-image">
+            <img src="images/alphabet-home.png" class="d-block" alt="...">
+          </div>
+        </div>
+
+        <div class="project-left">
           <div class="project-image">
             <div id="clonepageControls" class="carousel slide">
               <div class="carousel-inner">
@@ -150,6 +153,22 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </a>
+            </div>
+          </div>
+          <div class="project-content">
+            <h3>Clonepage</h3>
+            <div class="project-more-info">
+              <p>This is a clonepage of newstapa.
+                <br>
+                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
+              <div class="skills">
+                <span class="skill">HTML</span>
+                <span class="skill">CSS</span>
+                <span class="skill">JavaScript</span>
+                <span class="skill">Ruby on Rails</span>
+                <span class="skill">Heroku</span>
+              </div>
+              <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
             </div>
           </div>
         </div>
