what happen to my image

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="project-image">
-            <img src="images/alphabet-home.png" class="one-image" alt="...">
+            <img src="images/alphabet-home.png" class="d-block" alt="..." height="350" width="658">
           </div>
         </div>
 
