--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
           <span class="skill">Ruby on Rails</span>
           <span class="skill">Heroku</span>
           <span class="skill">Git</span>
+          <span class="skill">APIs</span>
+          <span class="skill">React</span>
+          <span class="skill">TypeScript</span>
         </div>
       </div>
 
