--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
 
@@ -17,7 +17,26 @@
     </div>
 
     <div class="containers">
-      <div class="container">
+
+      <div class="container mb-5">
+        <h2>Technical skills</h2>
+        <div class="skills">
+          <span class="skill">HTML</span>
+          <span class="skill">CSS</span>
+          <span class="skill">Bootstrap</span>
+          <span class="skill">JavaScript</span>
+          <span class="skill">Ruby</span>
+          <span class="skill">SQL</span>
+          <span class="skill">Ruby on Rails</span>
+          <span class="skill">Heroku</span>
+          <span class="skill">Git</span>
+          <span class="skill">APIs</span>
+          <span class="skill">React</span>
+          <span class="skill">TypeScript</span>
+        </div>
+      </div>
+
+      <div class="container mb-5">
         <h2>Personal projects</h2>
         <div class="project-right">
           <div class="project-content">
@@ -29,8 +48,8 @@
                 <span class="skill">CSS</span>
                 <span class="skill">Bootstrap</span>
                 <span class="skill">JavaScript</span>
-                <span class="skill">Ruby on Rails</span>
                 <span class="skill">Heroku</span>
+                <span class="skill">Ruby on Rails</span>
               </div>
               <a href="http://www.we-runners.run/" class="project-url">Visit this website</a>
             </div>
@@ -107,8 +126,8 @@
                 <span class="skill">CSS</span>
                 <span class="skill">Bootstrap</span>
                 <span class="skill">JavaScript</span>
-                <span class="skill">Ruby on Rails</span>
                 <span class="skill">Heroku</span>
+                <span class="skill">Ruby on Rails</span>
               </div>
               <a href="https://purshare.herokuapp.com/" class="project-url">Visit this website</a>
             </div>
@@ -164,31 +183,13 @@
               <div class="skills">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
+                <span class="skill">Heroku</span>
                 <span class="skill">JavaScript</span>
                 <span class="skill">Ruby on Rails</span>
-                <span class="skill">Heroku</span>
               </div>
               <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="container mb-5">
-        <h2>Technical skills</h2>
-        <div class="skills">
-          <span class="skill">HTML</span>
-          <span class="skill">CSS</span>
-          <span class="skill">Bootstrap</span>
-          <span class="skill">JavaScript</span>
-          <span class="skill">Ruby</span>
-          <span class="skill">SQL</span>
-          <span class="skill">Ruby on Rails</span>
-          <span class="skill">Heroku</span>
-          <span class="skill">Git</span>
-          <span class="skill">APIs</span>
-          <span class="skill">React</span>
-          <span class="skill">TypeScript</span>
         </div>
       </div>
 
