--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
       </div>
 
       <div class="container mb-5">
+        <h2>Education</h2>
+        <div class="educations">
+          <div class="one-education">
+            <div class="edu-image">
+              <img src="images/lewagon.jpeg">
+            </div>
+            <div class="edu-description">
+              <h3>Le Wagon</h3>
+              <h6>Full-Stack Web Developer Course | Sep 2020 - Dec 2020</h6>
+              <p>Attended Le Wagon Seoul (Batch #495). 9-week full-time intensive coding bootcamp learning HTML, CSS, Bootstrap, JavaScript ES6, SQL, git, GitHub, Heroku and Ruby on Rails.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container mb-5">
         <h2>Personal projects</h2>
         <div class="project-right">
           <div class="project-content">
@@ -90,6 +106,7 @@
             </div>
           </div>
         </div>
+
         <div class="project-left">
           <div class="project-image">
             <div id="purshareControls" class="carousel slide">
@@ -136,9 +153,50 @@
 
         <div class="project-right">
           <div class="project-content">
+            <h3>Movie App</h3>
+            <div class="project-more-info">
+              <p>This webpage is developed from one of challenges on 'Making a movie app using ReactJS' of NOMAD CODERS.</p>
+              <div class="skills info-element">
+                <span class="skill">HTML</span>
+                <span class="skill">CSS</span>
+                <span class="skill">API</span>
+                <span class="skill">JavaScript</span>
+                <span class="skill">React</span>
+                <span class="skill">Github Pages</span>
+              </div>
+              <a href="https://jay-jykim91.github.io/movie_app/" class="project-url">Visit this website</a>
+            </div>
+          </div>
+          <div class="project-image">
+            <div id="movieControls" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/movie-main.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/movie-show.png" class="d-block" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#movieControls" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#movieControls" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-left">
+          <div class="project-image">
+            <img src="images/alphabet-home.png" class="d-block" alt="..." height="350" width="658">
+          </div>
+          <div class="project-content">
             <h3>Sound of alphabet</h3>
             <div class="project-more-info">
-              <p>This project is developed from one of challenges on 'JavaScript30' of Wes Bos. You can hear the pronunciation by pressing the keyboard.</p>
+              <p>This webpage is developed from one of challenges on 'JavaScript30' of Wes Bos. You can hear the pronunciation by pressing the keyboard.</p>
               <div class="skills info-element">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
@@ -148,12 +206,25 @@
               <a href="https://jay-jykim91.github.io/alphabetjs/" class="project-url">Visit this website</a>
             </div>
           </div>
-          <div class="project-image">
-            <img src="images/alphabet-home.png" class="d-block" alt="..." height="350" width="658">
-          </div>
         </div>
 
-        <div class="project-left">
+        <div class="project-right">
+          <div class="project-content">
+            <h3>Clonepage</h3>
+            <div class="project-more-info">
+              <p>This is a clonepage of newstapa.
+                <br>
+                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
+              <div class="skills info-element">
+                <span class="skill">HTML</span>
+                <span class="skill">CSS</span>
+                <span class="skill">Heroku</span>
+                <span class="skill">JavaScript</span>
+                <span class="skill">Ruby on Rails</span>
+              </div>
+              <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
+            </div>
+          </div>
           <div class="project-image">
             <div id="clonepageControls" class="carousel slide">
               <div class="carousel-inner">
@@ -174,23 +245,8 @@
               </a>
             </div>
           </div>
-          <div class="project-content">
-            <h3>Clonepage</h3>
-            <div class="project-more-info">
-              <p>This is a clonepage of newstapa.
-                <br>
-                Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
-              <div class="skills">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">Heroku</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Ruby on Rails</span>
-              </div>
-              <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
-            </div>
-          </div>
         </div>
+
       </div>
 
     </div>
