--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="banner">
       <h1>Juyeon Kim</h1>
-      <h2>Web developer in Seoul</h2>
+      <h2>Web developer in Seoul, Korea</h2>
     </div>
 
     <div class="containers">
@@ -67,7 +67,7 @@
                 <span class="skill">Heroku</span>
                 <span class="skill">Ruby on Rails</span>
               </div>
-              <a href="http://www.we-runners.run/" class="project-url">Visit this website</a>
+              <a href="http://www.we-runners.run/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
           <div class="project-image">
@@ -146,7 +146,7 @@
                 <span class="skill">Heroku</span>
                 <span class="skill">Ruby on Rails</span>
               </div>
-              <a href="https://purshare.herokuapp.com/" class="project-url">Visit this website</a>
+              <a href="https://purshare.herokuapp.com/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
                 <span class="skill">React</span>
                 <span class="skill">Github Pages</span>
               </div>
-              <a href="https://jay-jykim91.github.io/movie_app/" class="project-url">Visit this website</a>
+              <a href="https://jay-jykim91.github.io/movie_app/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
           <div class="project-image">
@@ -203,7 +203,7 @@
                 <span class="skill">JavaScript</span>
                 <span class="skill">Github Pages</span>
               </div>
-              <a href="https://jay-jykim91.github.io/alphabetjs/" class="project-url">Visit this website</a>
+              <a href="https://jay-jykim91.github.io/alphabetjs/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
         </div>
@@ -222,7 +222,7 @@
                 <span class="skill">JavaScript</span>
                 <span class="skill">Ruby on Rails</span>
               </div>
-              <a href="https://clonenewstp.herokuapp.com/" class="project-url">Visit this website</a>
+              <a href="https://clonenewstp.herokuapp.com/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
           <div class="project-image">
@@ -253,9 +253,9 @@
     <div class="footer">
       <div class="container">
         <h4 class="mb-3">Contact me</h4>
-        <span><a href="malito:jay.jykim91@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span>
-        <span><a href="https://github.com/Jay-JYKim91"><i class="fa fa-github-square" aria-hidden="true"></i></a></span>
-        <span><a href="https://www.linkedin.com/in/juyeon-kim/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
+        <span><a href="jay.jykim91@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></span>
+        <span><a href="https://github.com/Jay-JYKim91" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></span>
+        <span><a href="https://www.linkedin.com/in/juyeon-kim/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
         <p>LAST UPDATE DECEMBER 2020</p>
       </div>
 
