--- a/index.html
+++ b/index.html
@@ -56,17 +56,21 @@
         <h2>Personal projects</h2>
         <div class="project-right">
           <div class="project-content">
-            <h3>We Run</h3>
-            <div class="project-more-info">
+            <div class="project-content-title">
+              <h3>We Run</h3>
+            </div>
+            <div class="project-content-info">
               <p>We run is an app for nomad runners who move from city to city and are looking to meet new running buddies and discover the city.</p>
-              <div class="skills info-element">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">Bootstrap</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Heroku</span>
-                <span class="skill">Ruby on Rails</span>
-              </div>
+            </div>
+            <div class="project-content-skills skills info-element">
+              <span class="skill">HTML</span>
+              <span class="skill">CSS</span>
+              <span class="skill">Bootstrap</span>
+              <span class="skill">JavaScript</span>
+              <span class="skill">Heroku</span>
+              <span class="skill">Ruby on Rails</span>
+            </div>
+            <div class="project-content-url">
               <a href="http://www.we-runners.run/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
@@ -135,17 +139,21 @@
             </div>
           </div>
           <div class="project-content">
-            <h3>Purshare</h3>
-            <div class="project-more-info">
+            <div class="project-content-title">
+              <h3>Purshare</h3>
+            </div>
+            <div class="project-content-info">
               <p>Purshare is a market place for second hand luxury purse.</p>
-              <div class="skills">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">Bootstrap</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Heroku</span>
-                <span class="skill">Ruby on Rails</span>
-              </div>
+            </div>
+            <div class="project-content-skills skills info-element">
+              <span class="skill">HTML</span>
+              <span class="skill">CSS</span>
+              <span class="skill">Bootstrap</span>
+              <span class="skill">JavaScript</span>
+              <span class="skill">Heroku</span>
+              <span class="skill">Ruby on Rails</span>
+            </div>
+            <div class="project-content-url">
               <a href="https://purshare.herokuapp.com/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
@@ -153,17 +161,21 @@
 
         <div class="project-right">
           <div class="project-content">
-            <h3>Movie App</h3>
-            <div class="project-more-info">
+            <div class="project-content-title">
+              <h3>Movie App</h3>
+            </div>
+            <div class="project-content-info">
               <p>This webpage is developed from one of challenges on 'Making a movie app using ReactJS' of NOMAD CODERS.</p>
-              <div class="skills info-element">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">API</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">React</span>
-                <span class="skill">Github Pages</span>
-              </div>
+            </div>
+            <div class="project-content-skills skills info-element">
+              <span class="skill">HTML</span>
+              <span class="skill">CSS</span>
+              <span class="skill">API</span>
+              <span class="skill">JavaScript</span>
+              <span class="skill">React</span>
+              <span class="skill">Github Pages</span>
+            </div>
+            <div class="project-content-url">
               <a href="https://jay-jykim91.github.io/movie_app/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
@@ -191,18 +203,39 @@
 
         <div class="project-left">
           <div class="project-image">
-            <img src="images/alphabet-home.png" class="d-block" alt="..." height="350" width="658">
+            <div id="alphaControls" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/alphabet-home.png" class="d-block" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/alphabet-active.png" class="d-block" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#alphaControls" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#alphaControls" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
           </div>
           <div class="project-content">
-            <h3>Sound of alphabet</h3>
-            <div class="project-more-info">
+            <div class="project-content-title">
+              <h3>Sound of alphabet</h3>
+            </div>
+            <div class="project-content-info">
               <p>This webpage is developed from one of challenges on 'JavaScript30' of Wes Bos. You can hear the pronunciation by pressing the keyboard.</p>
-              <div class="skills info-element">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Github Pages</span>
-              </div>
+            </div>
+            <div class="project-content-skills skills info-element">
+              <span class="skill">HTML</span>
+              <span class="skill">CSS</span>
+              <span class="skill">JavaScript</span>
+              <span class="skill">Github Pages</span>
+            </div>
+            <div class="project-content-url">
               <a href="https://jay-jykim91.github.io/alphabetjs/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
@@ -210,18 +243,22 @@
 
         <div class="project-right">
           <div class="project-content">
-            <h3>Clonepage</h3>
-            <div class="project-more-info">
+            <div class="project-content-title">
+              <h3>Clonepage</h3>
+            </div>
+            <div class="project-content-info">
               <p>This is a clonepage of newstapa.
                 <br>
                 Original page is "<a href="http://pages.newstapa.org/n1905" class="clone-link">http://pages.<br>newstapa.org/n1905</a>"</p>
-              <div class="skills info-element">
-                <span class="skill">HTML</span>
-                <span class="skill">CSS</span>
-                <span class="skill">Heroku</span>
-                <span class="skill">JavaScript</span>
-                <span class="skill">Ruby on Rails</span>
-              </div>
+            </div>
+            <div class="project-content-skills skills info-element">
+              <span class="skill">HTML</span>
+              <span class="skill">CSS</span>
+              <span class="skill">Heroku</span>
+              <span class="skill">JavaScript</span>
+              <span class="skill">Ruby on Rails</span>
+            </div>
+            <div class="project-content-url">
               <a href="https://clonenewstp.herokuapp.com/" target="_blank" class="project-url">Visit this website</a>
             </div>
           </div>
