delete some items

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <span class="skill">Git</span>
           <span class="skill">APIs</span>
           <span class="skill">React</span>
-          <span class="skill">TypeScript</span>
+<!--           <span class="skill">TypeScript</span> -->
         </div>
       </div>
 
@@ -241,7 +241,7 @@
           </div>
         </div>
 
-        <div class="project-right">
+<!--         <div class="project-right">
           <div class="project-content">
             <div class="project-content-title">
               <h3>Clonepage</h3>
@@ -282,7 +282,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
