--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <span><a href="jay.jykim91@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></span>
         <span><a href="https://github.com/Jay-JYKim91" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></span>
         <span><a href="https://www.linkedin.com/in/juyeon-kim/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
-        <p>LAST UPDATE DECEMBER 2020</p>
+        <p>LAST UPDATE 2020</p>
       </div>
 
 
